k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adsaga-server-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.adsaga.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adsaga-server-service
                port:
                  number: 80
